[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-asd"
version = "0.1.0"
description = "Optimized, production-ready implementation of active speaker detection"
readme = "README.md"
authors = [
    {name = "vid-io", email = "info@vid.io"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
keywords = ["active-speaker-detection", "talknet", "computer-vision", "audio-visual"]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pydantic>=1.8.0",
    "opencv-python-headless>=4.6.0",
    "scenedetect[opencv-headless]",
    "imageio[ffmpeg]",
    "torch>=1.10.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "python_speech_features",
]

[project.optional-dependencies]
sieve = [
    "sieve-python",
]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/vid-io/fast-asd"
Repository = "https://github.com/vid-io/fast-asd"
Issues = "https://github.com/vid-io/fast-asd/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_asd*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.md", "*.pth"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88